# PythonPiscine

./: .gitignore  Makefile  requirements.txt
0/ex02/: find_ft_type.py
0/ex03/: NULL_not_found.py
0/ex06/: ft_filter.py
0/ex08/: Loading.py
0/ex09/: pyproject.toml
0/ex09/src/ex09/: __init__
1/: give_bmi.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py
ex07/: sos.py
ex09/: pyproject.toml
